--- a/src/lesson0207/client/sample.fxml
+++ b/src/lesson0207/client/sample.fxml
@@ -8,9 +8,14 @@
         <PasswordField fx:id="passwordField" promptText="password" HBox.hgrow="ALWAYS"
         onAction="#tryToAuth"/>
         <Button text="auth" onAction="#tryToAuth" minWidth="50"/>
+        <Button text="reg" onAction="#registration" minWidth="50"/>
     </HBox>
 
-    <TextArea fx:id="textArea" VBox.vgrow="ALWAYS" editable="false"/>
+    <HBox VBox.vgrow="ALWAYS">
+    <TextArea fx:id="textArea" VBox.vgrow="ALWAYS" editable="false" wrapText="true"/>
+    <ListView fx:id="clientList" visible="false" managed="false" minWidth="50"
+        onMouseClicked="#clickClientList"/>
+    </HBox>
 
     <HBox fx:id="msgPanel" visible="false" managed="true">
         <TextField fx:id="textField" promptText="input text" HBox.hgrow="ALWAYS"
